[metadata]
name = exporter
version = 0.0.1
author = Hasan Yaman
author_email = hasannyaman@gmail.com
description = exporter helps to export Jupyter notebooks as a Python script.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hasan-yaman/Exporter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
install_requires = nbformat
python_requires = >=3.6